bare bones layout

--- a/Assignment0.html
+++ b/Assignment0.html
@@ -12,7 +12,14 @@
     <img src="./computer header.jpeg" alt="person typing on computer" width="100%">
     <details>
         <summary>Commentary</summary>
-        more info
+        I think this statement does a great job of encapsulating the pure essence of cyberspace and the fact that it opperates like one big 
+        mind.  There is absolutely no physicality to cyberspace (besides the wires that support it) and it functions like a brain: whatever
+        you can think of, you can create. Just as you can think up instances where physics and reality don't function the same, you can
+        create worlds online where they also don't work.  I think that Barlow's comments about lack of governance over cyberspace is a very 
+        idealist view; he is seeing cyberspace at it's best which isn't quite where we are now. I think the state of cyberspace has instilled 
+        a lot of fear in me about the future but Barlow's statement has reminded me of the amazing posibilities that cyberspace open up 
+        for everyone. <br>
+        &#129312 	&#129312 	&#129312
     </details>
     <h1>A Declaration of the Independence of Cyberspace</h1>
     <h2>By: John Perry Barlow </h2>
